--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Android Build
+Name: Android Build
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4  # <-- Isse v3 se v4 kar diya
       with:
         java-version: '17'
         distribution: 'temurin'
@@ -27,7 +27,8 @@ jobs:
       run: ./gradlew assembleDebug
 
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 # <-- Ye v3 tha, isse v4 karna zaroori hai
       with:
         name: app-debug
         path: app/build/outputs/apk/debug/app-debug.apk
+        
