--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,40 +1,50 @@
-name: Android Build
-
+name: Build Android APK
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
     branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v4
+      - name: Checkout Code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
 
-    - name: Build APK with Auto-Path
-      run: |
-        # Ye command poore project mein gradlew file dhoondegi
-        GRADLEW_PATH=$(find . -name gradlew | head -n 1)
-        if [ -z "$GRADLEW_PATH" ]; then
-          echo "Error: gradlew file nahi mili. Kya aapne Android project upload kiya hai?"
-          exit 1
-        fi
-        chmod +x "$GRADLEW_PATH"
-        cd $(dirname "$GRADLEW_PATH")
-        ./gradlew assembleDebug
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: my-android-app
-        path: "**/build/outputs/apk/debug/*.apk"
-        
+      - name: Build Web Project
+        run: npm run build
+
+      - name: Install Capacitor
+        run: npm install @capacitor/core @capacitor/cli @capacitor/android
+
+      - name: Add Android Platform
+        run: |
+          npx cap init "SIP-Calc" "com.vicky.sipcalc" --web-dir dist
+          npx cap add android
+          npx cap copy android
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Build APK with Gradle
+        run: |
+          cd android
+          chmod +x gradlew
+          ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: SIP-Calc-APK
+          path: android/app/build/outputs/apk/debug/app-debug.apk
+          
