Refactor CI workflow for web build and APK naming
Consolidate installation and build steps for web and Capacitor, and update APK artifact name.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,17 +15,14 @@ jobs:
         with:
           node-version: 18
 
-      - name: Install Dependencies
-        run: npm install
-
-      - name: Build Web Project
-        run: npm run build
-
-      - name: Install Capacitor
-        run: npm install @capacitor/core @capacitor/cli @capacitor/android
-
-      - name: Add Android Platform
+      - name: Install & Build Web
         run: |
+          npm install
+          npm run build
+
+      - name: Setup Capacitor & Android
+        run: |
+          npm install @capacitor/core @capacitor/cli @capacitor/android
           npx cap init "SIP-Calc" "com.vicky.sipcalc" --web-dir dist
           npx cap add android
           npx cap copy android
@@ -40,11 +37,12 @@ jobs:
         run: |
           cd android
           chmod +x gradlew
-          ./gradlew assembleDebug
+          # Gradle cache issue fix karne ke liye clean build
+          ./gradlew clean assembleDebug --no-daemon
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: SIP-Calc-APK
+          name: SIP-Calculator-Final-APK
           path: android/app/build/outputs/apk/debug/app-debug.apk
           
